[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Spike.gd" type="Script" id=1]
[ext_resource path="res://Sound/443806__deathscyp__spiketrap.wav" type="AudioStream" id=3]
[ext_resource path="res://Texturs/Sprites1.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 98, 18, 28, 28 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 50, 18, 28, 28 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 146, 16, 28, 30 )

[sub_resource type="Animation" id=4]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 50, 18, 28, 28 )

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 5 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer2D:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 98, 18, 28, 28 )

[sub_resource type="Animation" id=8]
resource_name = "Warning"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 7 ) ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 20.0438, 19.8246 )

[node name="Spikes" type="Area2D"]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.066213, -0.19865 )
scale = Vector2( 1.37247, 1.30625 )
texture = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )
anims/Idle = SubResource( 6 )
anims/RESET = SubResource( 10 )
anims/Warning = SubResource( 8 )

[node name="DamageArea2D" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea2D"]
position = Vector2( -0.0438452, -0.175385 )
shape = SubResource( 9 )
disabled = true

[node name="DetectorCollision" type="CollisionShape2D" parent="."]
position = Vector2( -0.0438452, -0.175385 )
shape = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="OffTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
max_distance = 250.0

[connection signal="body_entered" from="." to="." method="_on_Spikes_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="OffTimer" to="." method="_on_OffTimer_timeout"]
